<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tabbed_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/tabbed1Fragment"
        android:name="com.catata.perenxisainfo.Tabbed1Fragment"
        android:label="@string/teachings"
        tools:layout="@layout/fragment_tabbed1" />
    <fragment
        android:id="@+id/mapsFragment2"
        android:name="com.catata.perenxisainfo.MapsFragment"
        android:label="@string/maps_title"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.catata.perenxisainfo.HomeFragment"
        android:label="@string/name"
        tools:layout="@layout/fragment_home" />
</navigation>
