<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_inv_background"
    tools:context=".ASIXFragment">
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/asix_color"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grado_superior"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/asix"
                android:fontFamily="@font/title_font"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="www.iesserraperenxisa.com"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/asix_web"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/image_asix" />

        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/asix_titulos_background"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:text="Eixides Profesionals"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="28dp" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eixides_professionals_asix1"
            android:textColor="@color/black"
            android:padding="5dp"
            android:textSize="15sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/eixides_professionals_asix2"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/asix_titulos_background"
            android:padding="5dp"
            android:paddingStart="15dp"
            android:text="@string/two_cursos"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="28dp" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/asix_titulos_background"
            android:padding="5dp"
            android:paddingStart="15dp"
            android:text="Dual"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="28dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>




    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:padding="5dp"
            android:text="@string/modulos_1asix"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:padding="5dp"
            android:text="@string/modulos_2asix"
            android:textSize="15sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/footer_asix"/>


</androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>